Fix campaign page's appearance on mobile
Remade part of the layout with flexboxes, added some reponsiveness.
Works like a charm.

Bug: T317133

--- a/resources/ext.uploadWizard.uploadCampaign.display.less
+++ b/resources/ext.uploadWizard.uploadCampaign.display.less
@@ -1,10 +1,7 @@
+@import 'variables.less';
+
 #firstHeading {
 	display: none;
-}
-
-#mw-campaign-primary-info {
-	float: left;
-	width: 60%; /* Not ideal, but hey, I'm writing CSS! */
 }
 
 #mw-campaign-no-uploads-yet {
@@ -24,25 +21,55 @@
 #mw-campaign-header {
 	background-color: #f8f9fa;
 	overflow: hidden;
-	padding: 24px;
-	margin: 12px;
+	padding: 0.4em 1.2em 1.2em 1.2em;
+	margin: 0.5em;
 	border: 1px solid #c8ccd1;
+	display: flex;
+	flex-wrap: wrap;
+
+	@media ( max-width: @mobile-w ) {
+		padding: 0 0.8em 0.8em 0.8em;
+	}
+}
+
+#mw-campaign-primary-info,
+#mw-campaign-numbers {
+	margin-top: 0.8em;
+}
+
+#mw-campaign-primary-info {
+	flex-grow: 1000;
+
+	.oo-ui-buttonWidget {
+		margin-right: 2em;
+	}
 }
 
 #mw-campaign-numbers {
-	float: right;
+	flex-grow: 1;
+	display: flex;
+	justify-content: space-around;
+	gap: 1.2em;
+	flex-wrap: wrap;
+
+	@media ( max-width: @mobile-sm-w ) {
+		// Wrap to next row on narrow screens
+		flex-basis: 80%;
+	}
 }
 
 .mw-campaign-number-container {
 	text-align: center;
-	float: left;
-	margin-right: 24px;
 }
 
 .mw-campaign-number {
-	font-size: 96px;
-	line-height: 96px;
+	font-size: 6em;
+	line-height: 1em;
 	font-weight: lighter;
+
+	@media ( max-width: @mobile-sm-w ) {
+		font-size: 3.5em;
+	}
 }
 
 .mw-campaign-number-desc {
