--- a/resources/variables.less
+++ b/resources/variables.less
@@ -1,2 +1,3 @@
 @mobile-w: 900px;
+@mobile-sm-w: 450px;
 @desktop-w-min: 900.01px;
